plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.spotbugs' version '6.0.20'
    id 'jacoco'
}

group = 'katopia'
version = '0.0.1-SNAPSHOT'
description = 'fitcheck'

ext {
    set('springCloudAwsVersion', '3.2.0')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}"
    }
}

dependencies {
    // Web & Validation
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JPA & MySQL
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Security & OAuth
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // RabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // Scheduling
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-secrets-manager'

    // AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // JDBC Proxy (SQL logging/grouping)
    implementation 'net.ttddyy:datasource-proxy:1.10.1'

    // Dev & Test
    implementation 'io.micrometer:micrometer-registry-prometheus'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly "org.springframework.boot:spring-boot-docker-compose"
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    // API Docs
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // AWS S3 (Presigned URL)
    implementation platform("software.amazon.awssdk:bom:2.25.70")

    implementation "software.amazon.awssdk:s3"
    implementation "software.amazon.awssdk:auth"


}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

spotbugs {
    ignoreFailures = true
    excludeFilter = file("config/spotbugs/excludeFilter.xml")
}

jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    dependsOn tasks.named('test')
    reports {
        html.required.set(true)
        xml.required.set(true)
        csv.required.set(false)
    }
}
